--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third-party/simple_logs"]
 	path = third-party/simple_logs
 	url = https://github.com/andrejlevkovitch/simple_logs.git
+[submodule "third-party/Catch2"]
+	path = third-party/Catch2
+	url = https://github.com/catchorg/Catch2.git
