--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "third-party/Catch2"]
 	path = third-party/Catch2
 	url = https://github.com/catchorg/Catch2.git
+[submodule "third-party/wrk"]
+	path = third-party/wrk
+	url = https://github.com/andrejlevkovitch/wrk.git
